// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snaphsots should render background style selector 1`] = `
<div
  className="widget-map widget-map--layerstree-is-visible"
>
  <p>
    BackgroundStyles
  </p>
</div>
`;

exports[`snaphsots should render correctly 1`] = `
<div
  className="widget-map widget-map--layerstree-is-visible"
/>
`;

exports[`snaphsots should render correctly with a layers tree 1`] = `
<div
  className="widget-map widget-map--layerstree-is-visible"
>
  <p>
    LayersTree
  </p>
</div>
`;

exports[`snaphsots should render legends 1`] = `
<div
  className="widget-map widget-map--layerstree-is-visible"
>
  <p>
    LayersTree
  </p>
  <div
    className="widget-map__legends"
  >
    <div
      className="tf-legend"
    >
      <h4
        className="tf-legend__title"
      >
        foo
      </h4>
    </div>
  </div>
</div>
`;
